2000-05-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* ChangeLog:
	* ChangeLog-pre-2.2:
	moved old ChangeLog entries into new file

	* fvwm/focus.h (FOCUS_SET):
	fixed focus problem if clock was set backwards in time but less than
	30 seconds

	* fvwm/events.c (StashEventTime):
	* libs/defaults.h (CLOCK_SKEW_MS):
	new macro replaces hard coded 30s in StashEventTime

	* fvwm/borders.c:
	* fvwm/misc.c (ButtonPosition):
	moved function to borders.c

	* fvwm/externs.h:
	* fvwm/misc.h:
	moved extern decalrations to externs.h

	* fvwm/events.c:
	* fvwm/misc.c (flush_expose):
	(StashEventTime):
	(CoerceEnterNotifyOnCurrentWindow):
	moved event related functions to events.c

2000-05-05  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/gnome.c (GNOME_HandlePropRequest):
	* fvwm/repeat.c (repeat_function):
	* fvwm/read.c (run_command_stream):
	* fvwm/windowlist.c (do_windowList):
	* fvwm/conditional.c (PrevFunc):
	(NextFunc):
	(NoneFunc):
	(CurrentFunc):
	(AllFunc):
	(DirectionFunc):
	(PickFunc):
	(WindowIdFunc):
	* fvwm/module_interface.c (HandleModuleInput):
	* fvwm/fvwm.c (main):
	(StartupStuff):
	(SetRCDefaults):
	(Done):
	* fvwm/events.c (HandleKeyPress):
	(HandlePropertyNotify):
	(HandleClientMessage):
	(HandleButtonPress):
	(HandleButtonRelease):
	* fvwm/builtins.c (AddToDecor):
	(DestroyDecor):
	(strokeFunc):
	* fvwm/menus.c (do_menu):
	(pop_menu_up):
	(MenuInteraction):
	(pop_menu_down):
	(menu_func):
	* fvwm/functions.c (execute_complex_function):
	(ExecuteFunction):
	fixed expansion of complex function arguments

2000-05-04  Mikhael Goikhman  migo@homemail.com

	* configure.in: added GNOME support info,
	$with_gnome is now awailable for auto-generated stuff.
	* fvwm/fvwm2.1: fixed PipeRead usage example

2000-05-04  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/placement.c (PlaceWindow):
	* fvwm/move_resize.c (moveLoop):
	(InteractiveMove):
	(resize_window):
	fixed opaque resize w/ active placement
	removed AddWindow argument from moveLoop(): this can be checked via